Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15965

[OSK] Icon buttons are not themed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.13
    • Applications
    • None

    Description

      On-Screen Keyboard has some icon buttons (like Caps Lock, Enter, and so forth...) which are not rendered with the current theme. The system normally never renders these buttons so you've to render them manually in the application's code. On NT 6.x (Vista+ and onwards) systems, the system does automatically render them.

       

      I already have the means to fix this however I cannot push a PR right now as I'm currently busy with school. I created this ticket as a reminder in the future.

      Attachments

        1. Windows_XP-2019-05-07_080653.png
          16 kB
          Start
        2. Windows_XP_Luna_2019-04-30.png
          19 kB
          Start
        3. Windows_XP_Bushranger_2019-04-30.png
          767 kB
          Start
        4. VirtualBox_ReactOS_Theme_Bushranger.png
          122 kB
          Start
        5. OSK-Image.PNG
          58 kB
          George Bișoc
        6. Bushranger_Debug_20190429-0.4.13-dev-141-g77d234b.log
          42 kB
          Start

        Activity

          People

            Fraizeraust George Bișoc
            Fraizeraust George Bișoc
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: